// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-sc-t8lkk2-0 hDKktz"
  data-testid="header-bg"
>
  <div
    class="header__Container-sc-t8lkk2-1 iRQzTu"
  >
    <p
      class="header__Link-sc-t8lkk2-2 ddAQpu"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-sc-t8lkk2-1 iRQzTu"
>
  <p
    class="header__Link-sc-t8lkk2-2 lnrqbq"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-sc-t8lkk2-0 hqgEMh"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-sc-t8lkk2-1 iRQzTu"
  >
    <div
      class="header__Group-sc-t8lkk2-3 iHCncH"
    >
      <p
        class="header__Link-sc-t8lkk2-2 lnrqbq"
      >
        Series
      </p>
      <p
        class="header__Link-sc-t8lkk2-2 lnrqbq"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-sc-t8lkk2-3 iHCncH"
    >
      <div
        class="header__Search-sc-t8lkk2-5 fVbAtn"
      >
        <button
          class="header__SearchIcon-sc-t8lkk2-6 gGhKjy"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-sc-t8lkk2-4 faeHko"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-sc-t8lkk2-10 kXUssH"
      >
        <button
          class="header__Picture-sc-t8lkk2-8 fYIRMv"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-sc-t8lkk2-9 ewXRDc"
        >
          <div
            class="header__Group-sc-t8lkk2-3 iHCncH"
          >
            <button
              class="header__Picture-sc-t8lkk2-8 fYIRMv"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-sc-t8lkk2-2 lnrqbq"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-sc-t8lkk2-3 iHCncH"
          >
            <p
              class="header__Link-sc-t8lkk2-2 lnrqbq"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-sc-t8lkk2-1 header__Feature-sc-t8lkk2-11 iRQzTu kwKnjq"
  >
    <h2
      class="header__FeatureCallOut-sc-t8lkk2-12 gmXvDs"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-sc-t8lkk2-13 hCFcVg"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-sc-t8lkk2-15 hMYjPR"
    >
      Play
    </button>
  </div>
</div>
`;
